// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`L1 property mixin for a standard-issue resource 1`] = `
"/* eslint-disable prettier/prettier, @stylistic/max-len */
import * as cdk from "aws-cdk-lib/core";
import * as constructs from "constructs";
import * as mixins from "../../mixins";
import * as helpers from "../../util/property-mixins";
import * as service from "aws-cdk-lib/aws-some";

/**
 * @cloudformationResource AWS::Some::Resource
 * @mixin true
 * @stability external
 * @see http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-some-resource.html
 */
export class CfnThingPropsMixin extends cdk.Mixin implements constructs.IMixin {
  protected static readonly CFN_PROPERTY_KEYS: Array<string> = ["config", "externalId", "id"];

  protected readonly props: CfnThingMixinProps;

  protected readonly strategy: mixins.PropertyMergeStrategy;

  /**
   * Create a mixin to apply properties to \`AWS::Some::Resource\`.
   *
   * @param props L1 properties to apply
   * @param options Mixin options
   */
  public constructor(props: CfnThingMixinProps, options: mixins.CfnPropertyMixinOptions = {}) {
    super();
    this.props = props;
    this.strategy = (options.strategy ?? mixins.PropertyMergeStrategy.MERGE);
  }

  /**
   * Check if this mixin supports the given construct
   */
  public supports(construct: constructs.IConstruct): construct is service.CfnThing {
    return (cdk.CfnResource.isCfnResource(construct) && service.CfnThing.isCfnThing(construct));
  }

  /**
   * Apply the mixin properties to the construct
   */
  public applyTo(construct: constructs.IConstruct): void {
    if (this.supports(construct)) {
      if ((this.strategy === mixins.PropertyMergeStrategy.MERGE)) {
        helpers.deepMerge(construct, this.props, CfnThingPropsMixin.CFN_PROPERTY_KEYS);
      } else {
        helpers.shallowAssign(construct, this.props, CfnThingPropsMixin.CFN_PROPERTY_KEYS);
      }
    }
  }
}

export namespace CfnThingPropsMixin {
  /**
   * @struct
   * @stability external
   * @see http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-some-resource-resourceconfig.html
   */
  export interface ResourceConfigProperty {
    /**
     * @see http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-some-resource-resourceconfig.html#cfn-some-resource-resourceconfig-bar
     */
    readonly bar?: boolean | cdk.IResolvable;

    /**
     * @see http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-some-resource-resourceconfig.html#cfn-some-resource-resourceconfig-foo
     */
    readonly foo?: string;
  }
}

/**
 * Properties for CfnThingPropsMixin
 *
 * @struct
 * @stability external
 * @see http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-some-resource.html
 */
export interface CfnThingMixinProps {
  /**
   * @see http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-some-resource.html#cfn-some-resource-config
   */
  readonly config?: cdk.IResolvable | CfnThingPropsMixin.ResourceConfigProperty;

  /**
   * An external Id.
   *
   * @see http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-some-resource.html#cfn-some-resource-externalid
   */
  readonly externalId?: string;

  /**
   * The identifier of the resource.
   *
   * @see http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-some-resource.html#cfn-some-resource-id
   */
  readonly id?: string;
}"
`;

exports[`L1 property mixin with deeply nested relationship properties 1`] = `
"/* eslint-disable prettier/prettier, @stylistic/max-len */
import * as cdk from "aws-cdk-lib/core";
import * as constructs from "constructs";
import * as mixins from "../../mixins";
import * as helpers from "../../util/property-mixins";
import * as service from "aws-cdk-lib/aws-some";
import { aws_other as otherRefs } from "aws-cdk-lib/interfaces";

/**
 * @cloudformationResource AWS::Some::Resource
 * @mixin true
 * @stability external
 * @see http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-some-resource.html
 */
export class CfnThingPropsMixin extends cdk.Mixin implements constructs.IMixin {
  protected static readonly CFN_PROPERTY_KEYS: Array<string> = ["encryption", "id"];

  protected readonly props: CfnThingMixinProps;

  protected readonly strategy: mixins.PropertyMergeStrategy;

  /**
   * Create a mixin to apply properties to \`AWS::Some::Resource\`.
   *
   * @param props L1 properties to apply
   * @param options Mixin options
   */
  public constructor(props: CfnThingMixinProps, options: mixins.CfnPropertyMixinOptions = {}) {
    super();
    this.props = { ...props, ...flattenCfnThingMixinProps(props) };
    this.strategy = (options.strategy ?? mixins.PropertyMergeStrategy.MERGE);
  }

  /**
   * Check if this mixin supports the given construct
   */
  public supports(construct: constructs.IConstruct): construct is service.CfnThing {
    return (cdk.CfnResource.isCfnResource(construct) && service.CfnThing.isCfnThing(construct));
  }

  /**
   * Apply the mixin properties to the construct
   */
  public applyTo(construct: constructs.IConstruct): void {
    if (this.supports(construct)) {
      if ((this.strategy === mixins.PropertyMergeStrategy.MERGE)) {
        helpers.deepMerge(construct, this.props, CfnThingPropsMixin.CFN_PROPERTY_KEYS);
      } else {
        helpers.shallowAssign(construct, this.props, CfnThingPropsMixin.CFN_PROPERTY_KEYS);
      }
    }
  }
}

export namespace CfnThingPropsMixin {
  /**
   * @struct
   * @stability external
   * @see http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-some-resource-encryptionconfig.html
   */
  export interface EncryptionConfigProperty {
    /**
     * @see http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-some-resource-encryptionconfig.html#cfn-some-resource-encryptionconfig-algorithm
     */
    readonly algorithm?: string;

    /**
     * @see http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-some-resource-encryptionconfig.html#cfn-some-resource-encryptionconfig-keyid
     */
    readonly keyId?: otherRefs.IKeyRef | string;
  }
}

/**
 * Properties for CfnThingPropsMixin
 *
 * @struct
 * @stability external
 * @see http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-some-resource.html
 */
export interface CfnThingMixinProps {
  /**
   * @see http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-some-resource.html#cfn-some-resource-encryption
   */
  readonly encryption?: CfnThingPropsMixin.EncryptionConfigProperty | cdk.IResolvable;

  /**
   * @see http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-some-resource.html#cfn-some-resource-id
   */
  readonly id?: string;
}

// @ts-ignore TS6133
function flattenCfnThingPropsMixinEncryptionConfigProperty(props: CfnThingPropsMixin.EncryptionConfigProperty | cdk.IResolvable): CfnThingPropsMixin.EncryptionConfigProperty | cdk.IResolvable {
  if (cdk.isResolvableObject(props)) return props;
  return {
    algorithm: (!props.algorithm ? undefined : props.algorithm),
    keyId: (!props.keyId ? undefined : cdk.getRefProperty((props.keyId as otherRefs.IKeyRef)?.keyRef, 'keyId') ?? cdk.ensureStringOrUndefined(props.keyId, "keyId", "other.IKeyRef | string"))
  };
}

// @ts-ignore TS6133
function flattenCfnThingMixinProps(props: CfnThingMixinProps): CfnThingMixinProps {
  const ret: any = {};
  if ((props.encryption !== undefined)) ret.encryption = (!props.encryption ? undefined : (!props.encryption ? undefined : flattenCfnThingPropsMixinEncryptionConfigProperty(props.encryption)));
  return ret;
}"
`;
